--- a/web/css/style.css
+++ b/web/css/style.css
@@ -623,6 +623,9 @@ form input, form textarea{
 	width:100px;
 	height:100px;
 	float:left;
+	padding-right:10px;
+	border-right:1px dotted #ccc;
+	margin-right:10px;
 }
 
 
